刚才清空了index相关页面 开始项目首页

--- a/src/views/index/stylesheets/common/index.scss
+++ b/src/views/index/stylesheets/common/index.scss
@@ -1,11 +1,10 @@
 *{
-	margin:0;padding:0;
+    margin:0;
+    padding:0; 
 }
-h1{
-	color:yellow;
-	font-size:23px;
+li{
+    list-style:none;
 }
-div{
-	width:100px;
-	height:100px;
+img{
+    display:block;
 }
