--- a/src/views/index/stylesheets/index/mixins.scss
+++ b/src/views/index/stylesheets/index/mixins.scss
@@ -1,5 +1,3 @@
-@mixin border{  //定义一些通用样式，引入到其他文件中
-    border:1px solid yellow;
-    border-radius:10px;
-    background:blue;
-}
+//@mixin border{  //定义一些通用样式，引入到其他文件中}
+    
+
