--- a/src/views/index/index.html
+++ b/src/views/index/index.html
@@ -8,18 +8,8 @@
 		
 	</head>
 	<body>
-		<h1>测试一下把</h1>
-		<div>我是首页23214</div>
-		<div class="nav">
-			<ul>
-				<li><a href="">我是孩子1</a></li>
-				<li><a href="">我是孩子2</a></li>
-				<li><a href="">我是孩子3</a></li>
-				<li><a href="">我是孩子4</a></li>
-				<li><a href="">我是孩子5</a></li>
-			</ul>
-			<div>上传到github之后我要修改一下啦</div>
-		</div>
+		<!--果酷首页-->
+		
 	</body>
 </html>
 <!-- inject:js -->
